Replace deprecated Camel class